# regorus

./: .gitignore  CAUSALITY_BUGS.md  CHANGELOG.md  COVERAGE_AUDIT.md  Cargo.toml  DEPLOYMENT.md  ILDesign.md  README.Z3.md  README.md  TODO.md  allowed_server.smt2  azure-policy  azure-policy-aliases  builtins-list-for-verus.md  builtins.md  check_aliases.py  check_coverage.py  ideas.md  policies.md  regolator  rvm-to-z3.md  smt_clean.txt  smt_dump.txt  todo-policy-tests.md  verus.md
.github/: copilot-code-review-instructions.md  dependabot.yml
benches/: aci_benchmark.rs  benchmarks.rs  regorus_benchmark.rs  rvm_benchmark.rs  schema_validation_benchmark.rs  server_engine_vs_vm_benchmark.rs
causality-demo/: README.md  app.js  build-demo.sh  code-editor.js  demo-core.js  index.html  playground.html  playground.js  run-local.sh  scenarios.js  styles.css
docs/: DEPLOYMENT.md  builtins.md
examples/: complete_pipeline.rs  database_subset.rs  dump_bytecode.rs  eval_rule.rs  kql_ir_pipeline.rs  kql_translation.rs  regorus.rs  repro_subnet.rs  test_comment_styles.rs  test_comments.rs  z3_examples.rs
rvm-playground/: .gitignore  PACKAGING.md  README.md  app.js  index.html  package-for-deployment.sh  style.css
scripts/: analyze_policies.py  build-playground.sh  check_fn_context.py  run_cedar_examples.sh
smt/: Cargo.toml
smt/src/: backend.rs  context.rs  expr.rs  lib.rs  problem.rs  render.rs
smt/tests/: integration.rs
src/: causality.rs  causality_report.rs  lazy.rs  (+18 more)
tools/test-runner/: Cargo.toml  compat.md
tools/test-runner/src/: format.rs  main.rs  runner.rs
(+588 files in other folders)
